added more functionality

--- a/src/app/overlay/overlay.component.css
+++ b/src/app/overlay/overlay.component.css
@@ -73,3 +73,15 @@
     width: 0px; /* Remove scrollbar space */
     background: transparent; /* Optional: just make scrollbar invisible */
 }
+
+#A {
+    background: #C3EE8F;
+}
+
+#B {
+    background: #FFFF88;
+}
+
+#C {
+    background: #EED3FF;
+}
