--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -15,6 +15,7 @@
     overflow:auto;
     font-size:14px;
     height:119px;
+    opacity:0.7;
 }
 
 .likeCounter {
@@ -24,4 +25,16 @@
     bottom:2px;
     left:2px; 
     opacity:0.5;
+}
+
+#A {
+    background: #C3EE8F;
+}
+
+#B {
+    background: #FFFF88;
+}
+
+#C {
+    background: #EED3FF;
 }
