--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,4 +1,4 @@
-<div class="taskContainer">
+<div class="taskContainer" id = {{card.Section}}>
     <div class="taskTextContent">{{card.Content}}</div>
     <div class="likeCounter">+{{card.Likes}}</div>
   </div>
